fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ section {
   border-radius: 3px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 10px;
 }
 
